allow surefire to use preview features